# configFiles

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-3RD-PARTY.txt  README.md  main.cpp  timeTest.toml
configuration/: CMakeLists.txt
configuration/include/configuration/: ConfigurationParser.h
samples/toml/: filename.toml  filled.toml  sample.toml
tomlParser/: CMakeLists.txt
tomlParser/include/tomlParser/: TOMLParser.h
tomlParser/source/: TOMLParser.cpp
